# keyv

clients/rust/keyv-client/: Cargo.toml
clients/rust/keyv-client/src/: handshake.rs  lib.rs
clients/rust/keyv-client/tests/: test.rs
server/benches/: memchr.rs
server/keyv/: Cargo.toml
server/keyv-core/: Cargo.toml
server/keyv-core/src/: _unsafe.rs  deserialize.rs  engine_specifications.rs  lib.rs  network_object.rs  raw_instruction.rs  read_ext.rs  serialize.rs  write_ext.rs
server/keyv-core/src/instructions/: get.rs  init.rs  instr_result.rs  mod.rs  set.rs
server/keyv/src/: main.rs  prelude.rs
server/keyv/src/configuration/: config.rs  conn.rs  internal.rs  mod.rs  resource.rs  storage.rs
server/keyv/src/data/: aol.rs
server/keyv/src/engine/: mod.rs  parser.rs
server/keyv/src/instruction/: deserialize.rs  get.rs  init.rs  mod.rs  serialize.rs  set.rs
server/keyv/src/network/: auth_key.rs  handshake.rs  mod.rs  read_ext.rs  socket_listener.rs  write_ext.rs
