[package]
name = "keyv"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
divan = "0.1.21"
memchr = { version = "2.7.4", features = ["logging"] }

[[bench]]
path = "../benches/memchr.rs"
name = "memchr"
harness = false

[dependencies]
# Async and concurrency
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "parking_lot", "net", "fs", "io-util", "sync", "time"] }
io-uring = "0.7.7"
bus = "2.4.1"


#Error handling & Logs & Metrics
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "parking_lot", "time", "local-time"] }


hashbrown = { version = "0.15.4" }
itertools = "0.14.0"


serde = { version = "1.0.219", features = ["default", "derive", "rc"] }
serde_yaml = "0.9.33"

# System
dirs = "6.0.0"
sysinfo = "0.35.2"
rand = "0.9.1"

chacha20poly1305 = { version = "0.10.1" }
chacha20 = { version = "0.9.1" }